# StromatoliteGrowth

./: .gitignore  README.md  pyproject.toml
data/: 1d-parameters.json  3d-circular-domed-final-surface.csv  3d-circular-final-surface.csv  3d-circular.config  3d-domed.config
data/config/: 2d.config  3d-rectangle.config  biology.config
data/output/: 1d-layers.csv  2d-final-surface.csv  3d-circular-domed-layer-surfaces.npz  3d-circular-final-layer-surfaces.npz  3d-final-surface.csv  3d-layer-surfaces.npz
diagrams/: 3d-render-pipeline.bpmn
notebooks/: 1d_vertical_column_model.ipynb  2d_cross_section_model.ipynb  3d_circular_domed_model.ipynb  3d_circular_masked_model.ipynb  3d_rectangular_model.ipynb  common.ipynb
scripts/: build-layer-surfaces.py  build-layers.sh  make-venv.sh  render-dome.sh  render-interactive-dome.py  render-interactive.sh
src/: build-layer-surfaces.py  render-interactive-3d.py
